<?xml version="1.0" encoding="utf-8"?>
<layout>
    <ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".user.TermsandConditions">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <include
                android:id="@+id/layoutBase"
                layout="@layout/root_layout"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />


            <TextView
                android:id="@+id/text_terms"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Terms and Conditions"
                android:textSize="@dimen/size_20dp"
                android:textStyle="bold"
                android:textColor="@color/colorDarkstateBlue"
                android:fontFamily="@font/amaranth"
                android:layout_below="@id/layoutBase"
                android:layout_marginLeft="@dimen/size_16dp"
                android:layout_marginTop="@dimen/size_16dp"
                android:padding="@dimen/size_5dp"/>

            <TextView
                android:id="@+id/text_termsText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/terms"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_terms"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"
                android:layout_marginTop="@dimen/padd_10"/>

            <TextView
                android:id="@+id/text_description"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/size_16dp"
                android:layout_below="@id/text_termsText"
                android:textColor="@color/colorblack"
                android:textStyle="bold"
                android:text="@string/termsdescription"
                android:layout_marginTop="@dimen/size_5dp"/>

            <TextView
                android:id="@+id/text_notes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="IMPORTANT NOTES :"
                android:textColor="@color/colorDarkstateBlue"
                android:fontFamily="@font/amaranth"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_description"
                android:layout_marginTop="@dimen/padd_10"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note1"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_notes"
                android:layout_marginTop="@dimen/padd_10"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note2"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note1"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note3"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note2"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>
            <TextView
                android:id="@+id/text_note4"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note5"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note3"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note4"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note4"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note6"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note5"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note7"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note6"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note8"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note7"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/note9"
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note8"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>

            <TextView
                android:id="@+id/text_note10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="10.For Urgent Service,we charge double amount of normal service charge."
                android:textColor="@color/colorblack"
                android:textSize="@dimen/size_16dp"
                android:layout_below="@id/text_note9"
                android:layout_marginTop="@dimen/size_5dp"
                android:textStyle="bold"
                android:layout_marginLeft="@dimen/size_16dp"/>


        </RelativeLayout>



    </ScrollView>
</layout>
